--- a/Northwind.Client/Northwind.Client/package.json
+++ b/Northwind.Client/Northwind.Client/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
