--- a/Northwind.Client/Northwind.Client/package.json
+++ b/Northwind.Client/Northwind.Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
