--- a/Northwind.Api/appsettings.json
+++ b/Northwind.Api/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=northwind;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*" 
+  "Jwt": {
+    "Key": "super-secret-dev-key-change-me-please-32+chars",
+    "Issuer": "Northwind.Api",
+    "Audience": "Northwind.Client",
+    "ExpiresMinutes": 60
+  },
+  "AllowedHosts": "*"
 }
