--- a/Northwind.Client/package.json
+++ b/Northwind.Client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
