--- a/Northwind.Client/package.json
+++ b/Northwind.Client/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.6",
+    "ace-builds": "^1.43.4",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-modal": "^3.16.3",
